feat: Add API key management functionality
- Introduced new API key routes for creating, listing, retrieving, updating, and deleting API keys.
- Implemented API key validation and permission checks in middleware.
- Created database migration for the API keys table.
- Added API key data model and unit for handling business logic.
- Integrated API key functionality into the existing authentication system.
- Updated route registration to include API key routes.
- Enhanced error handling and response structures for API key operations.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,9 +11,8 @@ name = "cms-serverless-prod"
 
 [[d1_databases]]
 binding = "DB"
-database_name = "database_name"
-database_id = "database_id"
+database_name = "cms-db"
+database_id = "6ebc2e92-9be4-4238-9ddc-749afa09142e"
 
 [vars]
-JWT_SECRET = "your-jwt-secret-here"
 ENVIRONMENT = "development"
