--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "cms-serverless",
-  "version": "1.0.0",
-  "description": "Serverless Headless CMS with Cloudflare Workers",
+  "name": "akitsu",
+  "version": "0.1.0",
+  "description": "Serverless Headless CMS for Cloudflare Workers",
   "main": "src/runtime/api.ts",
+  "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/xirf/akitsu.git"
+    },
+  "keywords": [
+    "headless",
+    "cms",
+    "cloudflare",
+    "workers",
+    "serverless"
+  ],
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
