--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,13 @@
-name = "cms-serverless"
+name = "akitsu-cms"
 main = "src/runtime/api.ts"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat_v2"]
 
 [env.development]
-name = "cms-serverless-dev"
+name = "akitsu-cms-dev"
 
 [env.production]
-name = "cms-serverless-prod"
+name = "akitsu-cms-prod"
 
 [[d1_databases]]
 binding = "DB"
